service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-mutations
spec:
  selector:
    app: python-admission
  ports:
  - port: 8001
    targetPort: 8001
