admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  labels:
    component: mutating-controller
webhooks:
  - name: test.example.com
    failurePolicy: Fail
    clientConfig:
      service:
        name: test-mutations
        namespace: default
        path: /mutate/pods
        port: 8001
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVEekNDQXZlZ0F3SUJBZ0lVWDU0NjdwYkhJSmRGd1hqUlVzdE1JaWRzV1NBd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2daWXhDekFKQmdOVkJBWVRBbFZUTVFzd0NRWURWUVFJREFKRFFURVJNQThHQTFVRUJ3d0lVMkZ1SUVwdgpjMlV4RFRBTEJnTlZCQW9NQkhSbGMzUXhEVEFMQmdOVkJBc01CSFJsYzNReEl6QWhCZ05WQkFNTUduUmxjM1F0CmJYVjBZWFJwYjI1ekxtUmxabUYxYkhRdWMzWmpNU1F3SWdZSktvWklodmNOQVFrQkZoVnVhV3htY21GdVFHMXAKWTNKdmMyOW1kQzVqYjIwd0hoY05NakF4TVRBMk1qSTFNREF3V2hjTk1qTXdPREkzTWpJMU1EQXdXakNCbGpFTApNQWtHQTFVRUJo [...]
    rules:
      - apiGroups: ["apps"]
        resources:
          - "pods"
        apiVersions:
          - "*"
        operations:
          - CREATE
